Added docusign tests.

--- a/Geo-Location-Experiment/Geo-Location-Experiment.csproj
+++ b/Geo-Location-Experiment/Geo-Location-Experiment.csproj
@@ -45,9 +45,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AgencyRM.SDK, Version=1.0.0.31115, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AgencyRM.SDK.1.0.0.16-alpha\lib\portable45-net45+win8+wp8\AgencyRM.SDK.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Antlr3.Runtime">
       <Private>True</Private>
       <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="DocuSign.GeneratedClasses, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AgencyRM.SDK.1.0.0.16-alpha\lib\portable45-net45+win8+wp8\DocuSign.GeneratedClasses.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DocuSign.SDK, Version=1.0.0.31114, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AgencyRM.SDK.1.0.0.16-alpha\lib\portable45-net45+win8+wp8\DocuSign.SDK.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -130,11 +142,16 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Owin">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="RestSharp, Version=105.2.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AgencyRM.SDK.1.0.0.16-alpha\lib\portable45-net45+win8+wp8\RestSharp.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -346,6 +363,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Service References\Application Insights\ConnectedService.json" />
+    <Content Include="Views\Home\SendDoc.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
